//===----------------------------------------------------------------------===//
// ActorEdge message envelope - Wire.Envelope equivalent for actor-edge
//===----------------------------------------------------------------------===//

syntax = "proto3";

option optimize_for = SPEED;
option swift_prefix = "ActorEdge";

import "ActorEdgeID.proto";
import "Serialization.proto";

// Main message envelope for ActorEdge transport
message Envelope {
    ActorID recipient = 1;        // Destination actor
    ActorID sender = 2;           // Source actor (optional)
    
    Manifest manifest = 3;        // Serialization metadata
    bytes payload = 4;            // Serialized message data
    
    MessageMetadata metadata = 5; // Message metadata
    MessageType type = 6;         // Message type
}

// Message metadata
message MessageMetadata {
    string call_id = 1;           // Unique call identifier
    string target = 2;            // Method/target identifier  
    int64 timestamp = 3;          // Unix timestamp
    map<string, string> headers = 4; // Custom headers
}

// Message types
enum MessageType {
    UNKNOWN = 0;
    INVOCATION = 1;               // Remote method invocation
    RESPONSE = 2;                 // Method response
    ERROR = 3;                    // Error response
    SYSTEM = 4;                   // System message (for future use)
}